--- a/CRUDEmp/nbproject/project.properties
+++ b/CRUDEmp/nbproject/project.properties
@@ -6,6 +6,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=CRUDEmp
 application.vendor=Vinicius
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -31,7 +32,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.7.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\antlr-2.7.7.jar
-file.reference.antlr-2.7.7.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\antlr-2.7.7.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\dom4j-1.6.1.jar
 file.reference.dom4j-1.6.1.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-4.0.5.Final.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\hibernate-commons-annotations-4.0.5.Final.jar
@@ -74,20 +74,7 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.1.3.GA.jar}:\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar}:\
-    ${file.reference.antlr-2.7.7.jar-1}:\
-    ${file.reference.dom4j-1.6.1.jar-1}:\
-    ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar-1}:\
-    ${file.reference.hibernate-core-4.3.6.Final.jar-1}:\
-    ${file.reference.hibernate-entitymanager-4.3.6.Final.jar-1}:\
-    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar-1}:\
-    ${file.reference.jandex-1.1.0.Final.jar-1}:\
-    ${file.reference.javassist-3.18.1-GA.jar-1}:\
-    ${file.reference.jboss-logging-3.1.3.GA.jar-1}:\
-    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar-1}:\
-    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.33.jar}:\
-    ${file.reference.xml-apis-1.0.b2.jar-1}
+    ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -118,12 +105,16 @@ javafx.classpath.extension=\
     ${java.home}/lib/javaws.jar:\
     ${java.home}/lib/deploy.jar:\
     ${java.home}/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
-javafx.deploy.permissionselevated=true
+javafx.deploy.installpermanently=false
+javafx.deploy.permissionselevated=false
 # Definir como verdadeiro impede a cria\u00e7\u00e3o de c\u00f3pia tempor\u00e1ria de artefatos de implanta\u00e7\u00e3o antes de cada execu\u00e7\u00e3o (desativa as execu\u00e7\u00f5es atuais)
 javafx.disable.concurrent.runs=false
 # Definir como verdadeiro ativa v\u00e1rias execu\u00e7\u00f5es simult\u00e2neas do mesmo WebStart ou projeto Run-in-Browser
@@ -132,7 +123,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=org.fatec.labd.crudpet.CRUDPet
+javafx.main.class=CRUDEmp
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -144,7 +135,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
-javafx.signing.enabled=true
+javafx.signing.blob=false
+javafx.signing.enabled=false
 javafx.signing.type=self
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
@@ -156,6 +148,8 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=true
+native.bundling.enabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
