--- a/CRUDEmp/nbproject/project.properties
+++ b/CRUDEmp/nbproject/project.properties
@@ -52,8 +52,8 @@ file.reference.jboss-logging-annotations-1.2.0.Beta1.jar=C:\\Users\\Vinicius\\De
 file.reference.jboss-logging-annotations-1.2.0.Beta1.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\jboss-logging-annotations-1.2.0.Beta1.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\jboss-transaction-api_1.2_spec-1.0.0.Final.jar
 file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\jboss-transaction-api_1.2_spec-1.0.0.Final.jar
-file.reference.mysql-connector-java-5.1.26-bin.jar=../../../FATEC/5_semestre/materiais LBD/BD/mysql-connector-java-5.1.26-bin.jar
 file.reference.mysql-connector-java-5.1.33.jar=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\mysql-connector-java-5.1.33.jar
+file.reference.mysql-connector-java-5.1.33.jar-1=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\mysql-connector-java-5.1.33.jar
 file.reference.xml-apis-1.0.b2.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\xml-apis-1.0.b2.jar
 file.reference.xml-apis-1.0.b2.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\xml-apis-1.0.b2.jar
 includes=**
@@ -62,7 +62,6 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
     ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar}:\
@@ -74,6 +73,7 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.1.3.GA.jar}:\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
+    ${file.reference.mysql-connector-java-5.1.33.jar-1}:\
     ${file.reference.xml-apis-1.0.b2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
