--- a/CRUDEmp/nbproject/project.properties
+++ b/CRUDEmp/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.7.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\antlr-2.7.7.jar
+file.reference.antlr-2.7.7.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\antlr-2.7.7.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\dom4j-1.6.1.jar
 file.reference.dom4j-1.6.1.jar-1=C:\\Users\\Joao Carloss\\Desktop\\FATEC 5\u00ba Semestre\\Laborat\u00f3rio de Banco de Dados\\lib\\dom4j-1.6.1.jar
 file.reference.hibernate-commons-annotations-4.0.5.Final.jar=C:\\Users\\Vinicius\\Desktop\\LBD tarde\\libs\\hibernate-commons-annotations-4.0.5.Final.jar
@@ -74,7 +75,20 @@ javac.classpath=\
     ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar}:\
     ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar}:\
     ${file.reference.mysql-connector-java-5.1.33.jar-1}:\
-    ${file.reference.xml-apis-1.0.b2.jar}
+    ${file.reference.xml-apis-1.0.b2.jar}:\
+    ${file.reference.antlr-2.7.7.jar-1}:\
+    ${file.reference.dom4j-1.6.1.jar-1}:\
+    ${file.reference.hibernate-commons-annotations-4.0.5.Final.jar-1}:\
+    ${file.reference.hibernate-core-4.3.6.Final.jar-1}:\
+    ${file.reference.hibernate-entitymanager-4.3.6.Final.jar-1}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar-1}:\
+    ${file.reference.jandex-1.1.0.Final.jar-1}:\
+    ${file.reference.javassist-3.18.1-GA.jar-1}:\
+    ${file.reference.jboss-logging-3.1.3.GA.jar-1}:\
+    ${file.reference.jboss-logging-annotations-1.2.0.Beta1.jar-1}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.0.Final.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.33.jar}:\
+    ${file.reference.xml-apis-1.0.b2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
